<?xml version="1.0"?>
<package format="2">.
  <name>visual_msgs</name>
  <version>0.0.1</version>
  <description>visual messages for RVIZ.</description>
  <maintainer email="zero000.eed03@nctu.edu.tw">Tom</maintainer>
  <author email="zero000.eed03@nctu.edu.tw">Tom</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
